# library-manager

./: .gitignore  .gitmodules  CMakeLists.txt
src/: author.h  book.cpp  book.h  date.cpp  date.h  library_manager.cpp  library_manager.h
src/library-manager/: author.cpp  author.h  book.cpp  book.h  borrower.cpp  borrower.h  date.cpp  date.h  date_unittest.cpp  library_manager.cpp  library_manager.h  library_manager_unittest.cpp  person.cpp  person.h  person_unittest.cpp  uid.cpp  uid.h  uid_unittest.cpp
src/library-manager/linked-lists/: linked_list.h  list_unittest.cpp
src/library-manager/strings/: README.md  ds_string.cpp  ds_string.h  string_unittest.cpp
test/: main.cpp
